fix start pomodoro icon center aligning

--- a/src/styles/components/_pomodoro.scss
+++ b/src/styles/components/_pomodoro.scss
@@ -94,3 +94,6 @@
 .fa-play {
   display: none;
 }
+.fa-circle-play {
+  vertical-align: middle;
+}
